--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 <body>
 
 <div class="header-banner">
+<a href="https://www.poriruaheatbasketball.org" target="_blank">
+  <img src="images/logo.png" alt="Heat Logo" width="50">
+</a>
   <img src="images/logo.png" alt="Te Tai Hou Logo">
-  <h1>Te Tai Hou Teams - 2025</h1>
+  <h1>TE TAI HOU TEAMS - 2025 TERM 4</h1>
 </div>
 <hr>
 
@@ -60,7 +63,7 @@
   const groupState = {}; // Tracks collapsed/expanded state by group
 
   // Load CSV
-  const res = await fetch('data/data.csv');
+  const res = await fetch('data.csv');
   const text = await res.text();
   const lines = text.trim().split('\n');
   headers = lines[0].split(',').map(h => h.trim());
