--- a/index.html
+++ b/index.html
@@ -16,18 +16,28 @@
   button:hover { background-color: #1e40af; }
   table { width: 100%; border-collapse: collapse; margin-top: 10px; }
   th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-  th { background-color: #f0f0f0; cursor: pointer; }
+  th { background-color: #f0f0f0; cursor: pointer; position: sticky; top: 0; z-index: 3; }
   tr:hover { background-color: #f9f9f9; }
-  .group-header td { background-color: #e2e8f0; font-weight: bold; cursor: pointer; }
+  .group-header td {
+    background-color: #e2e8f0;
+    font-weight: bold;
+    cursor: pointer;
+    position: sticky;
+    top: 36px;
+    z-index: 2;
+  }
+  .group-controls {
+    margin-bottom: 15px;
+  }
 </style>
 </head>
 <body>
 
 <div class="header-banner">
-<a href="https://www.poriruaheatbasketball.org" target="_blank">
-  <img src="images/logo.png" alt="Te Tai Hou Logo">
-</a>
-   <h1>TE TAI HOU TEAMS - 2025 TERM 4</h1>
+  <a href="https://www.poriruaheatbasketball.org" target="_blank">
+    <img src="images/logo.png" alt="Te Tai Hou Logo">
+  </a>
+  <h1>TE TAI HOU TEAMS - 2025 TERM 4</h1>
 </div>
 <hr>
 
@@ -36,6 +46,11 @@
   <label for="teamFilter">Filter by Eligible Team:</label>
   <select id="teamFilter"><option value="">All Teams</option></select>
   <button id="export">Export Filtered Data</button>
+</div>
+
+<div class="group-controls">
+  <button id="expandAll">Expand All</button>
+  <button id="collapseAll">Collapse All</button>
 </div>
 
 <table id="data-table">
@@ -51,26 +66,30 @@
   const search = document.getElementById('search');
   const teamFilter = document.getElementById('teamFilter');
   const exportBtn = document.getElementById('export');
+  const expandAllBtn = document.getElementById('expandAll');
+  const collapseAllBtn = document.getElementById('collapseAll');
 
   let allRows = [];
   let headers = [];
   let sortColumn = null;
   let sortAsc = true;
-
-  // Custom group order
+  const groupState = {};
   const customGroupOrder = ['Starters', 'Development', 'Reserve'];
-  const groupState = {}; // Tracks collapsed/expanded state by group
 
-  // Load CSV
   const res = await fetch('data.csv');
   const text = await res.text();
   const lines = text.trim().split('\n');
   headers = lines[0].split(',').map(h => h.trim());
   allRows = lines.slice(1).map(line => line.split(','));
 
-  // Render table headers
+  const teamIndex = headers.findIndex(h => h.toLowerCase() === 'eligible team');
+  const groupIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
+  const firstNameIndex = headers.findIndex(h => h.toLowerCase() === 'first name');
+
+  // Build header row (excluding Indicative Selection)
   const headerRow = document.createElement('tr');
   headers.forEach((header, i) => {
+    if (i === groupIndex) return; // hide indicative selection
     const th = document.createElement('th');
     th.textContent = header;
     th.addEventListener('click', () => sortTable(i));
@@ -78,12 +97,7 @@
   });
   thead.appendChild(headerRow);
 
-  // Indexes for filters
-  const teamIndex = headers.findIndex(h => h.toLowerCase() === 'eligible team');
-  const groupIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
-  const firstNameIndex = headers.findIndex(h => h.toLowerCase() === 'first name');
-
-  // Populate dropdown
+  // Populate team dropdown
   const uniqueTeams = [...new Set(allRows.map(r => r[teamIndex]))].sort();
   uniqueTeams.forEach(team => {
     const opt = document.createElement('option');
@@ -93,20 +107,22 @@
   });
 
   // Initial render
-  renderGroupedRows(allRows);
+  applyFilters();
 
-  // Event listeners for filters
+  // Event listeners
   search.addEventListener('input', applyFilters);
   teamFilter.addEventListener('change', applyFilters);
+  expandAllBtn.addEventListener('click', () => setAllGroups(false));
+  collapseAllBtn.addEventListener('click', () => setAllGroups(true));
 
   function applyFilters(){
     const q = search.value.trim().toLowerCase();
     const selectedTeam = teamFilter.value;
     const filtered = allRows.filter(row => {
+      const hasGroup = row[groupIndex]?.trim() !== '';
       const matchesSearch = row.some(c => c.toLowerCase().includes(q));
       const matchesTeam = !selectedTeam || row[teamIndex] === selectedTeam;
-      const hasGroup = row[groupIndex].trim() !== ''; // Exclude rows without group
-      return matchesSearch && matchesTeam && hasGroup;
+      return hasGroup && matchesSearch && matchesTeam;
     });
     renderGroupedRows(filtered);
   }
@@ -120,7 +136,6 @@
       grouped[key].push(r);
     });
 
-    // Sort groups according to custom order
     const sortedGroups = Object.keys(grouped).sort((a,b) => {
       const idxA = customGroupOrder.indexOf(a);
       const idxB = customGroupOrder.indexOf(b);
@@ -131,43 +146,43 @@
     });
 
     sortedGroups.forEach(group => {
-      // Sort rows in the group by First Name
       grouped[group].sort((a,b) => a[firstNameIndex].localeCompare(b[firstNameIndex]));
 
-      // Render group header
+      // Group header with count
       const trGroup = document.createElement('tr');
       trGroup.className = 'group-header';
       const tdGroup = document.createElement('td');
-      tdGroup.colSpan = headers.length;
-
-      // Default expanded if state not set
-      if (!(group in groupState)) groupState[group] = false; // false = expanded
-      tdGroup.textContent = (groupState[group] ? '▶ ' : '▼ ') + group;
-
+      tdGroup.colSpan = headers.length - 1;
+      const count = grouped[group].length;
+      if (!(group in groupState)) groupState[group] = false;
+      tdGroup.textContent = (groupState[group] ? '▶ ' : '▼ ') + `${group} (${count})`;
       trGroup.appendChild(tdGroup);
       tbody.appendChild(trGroup);
 
-      // Render rows
       const groupRows = grouped[group].map(row => {
         const tr = document.createElement('tr');
-        row.forEach(cell => {
+        row.forEach((cell, i) => {
+          if (i === groupIndex) return;
           const td = document.createElement('td');
           td.textContent = cell;
           tr.appendChild(td);
         });
-        // Hide rows if collapsed
         if (groupState[group]) tr.style.display = 'none';
         return tr;
       });
       groupRows.forEach(tr => tbody.appendChild(tr));
 
-      // Collapsible toggle
       trGroup.addEventListener('click', () => {
-        groupState[group] = !groupState[group]; // toggle state
+        groupState[group] = !groupState[group];
         groupRows.forEach(tr => tr.style.display = groupState[group] ? 'none' : '');
-        tdGroup.textContent = (groupState[group] ? '▶ ' : '▼ ') + group;
+        tdGroup.textContent = (groupState[group] ? '▶ ' : '▼ ') + `${group} (${count})`;
       });
     });
+  }
+
+  function setAllGroups(collapse){
+    Object.keys(groupState).forEach(k => groupState[k] = collapse);
+    applyFilters();
   }
 
   function sortTable(index){
@@ -181,11 +196,11 @@
       if(valA > valB) return sortAsc ? 1 : -1;
       return 0;
     });
-    applyFilters(); // Re-render with new sort
+    applyFilters();
   }
 
   exportBtn.addEventListener('click', () => {
-    const rows = Array.from(tbody.querySelectorAll('tr')).map(r =>
+    const rows = Array.from(tbody.querySelectorAll('tr:not(.group-header)')).map(r =>
       Array.from(r.children).map(td => td.textContent)
     );
     const csvContent = rows.map(r =>
@@ -203,4 +218,3 @@
 
 </body>
 </html>
-
