--- a/index.html
+++ b/index.html
@@ -1,220 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Te Tai Hou Teams - 2025</title>
-<style>
-  body { font-family: Arial, sans-serif; margin: 40px; background-color: #fafafa; color: #333; }
-  .header-banner { display: flex; align-items: center; justify-content: center; margin-top: 20px; }
-  .header-banner img { height: 80px; margin-right: 15px; }
-  .header-banner h1 { margin: 0; }
-  hr { margin: 20px 0; }
-  .controls { margin-bottom: 10px; display: flex; flex-wrap: wrap; gap: 10px; align-items: center; }
-  input, select { padding: 6px 10px; border-radius: 4px; border: 1px solid #ccc; }
-  button { padding: 6px 12px; border-radius: 4px; border: none; background-color: #2563eb; color: #fff; cursor: pointer; }
-  button:hover { background-color: #1e40af; }
-  table { width: 100%; border-collapse: collapse; margin-top: 10px; }
-  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-  th { background-color: #f0f0f0; cursor: pointer; position: sticky; top: 0; z-index: 3; }
-  tr:hover { background-color: #f9f9f9; }
-  .group-header td {
-    background-color: #e2e8f0;
-    font-weight: bold;
-    cursor: pointer;
-    position: sticky;
-    top: 36px;
-    z-index: 2;
-  }
-  .group-controls {
-    margin-bottom: 15px;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Te Tai Hou Teams – 2025</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<div class="header-banner">
-  <a href="https://www.poriruaheatbasketball.org" target="_blank">
-    <img src="images/logo.png" alt="Te Tai Hou Logo">
-  </a>
-  <h1>TE TAI HOU TEAMS - 2025 TERM 4</h1>
-</div>
-<hr>
+  <header>
+    <img src="logo.png" alt="Te Tai Hou Logo">
+    <h1>Te Tai Hou Teams – 2025</h1>
+  </header>
 
-<div class="controls">
-  <input type="text" id="search" placeholder="Search table...">
-  <label for="teamFilter">Filter by Eligible Team:</label>
-  <select id="teamFilter"><option value="">All Teams</option></select>
-  <button id="export">Export Filtered Data</button>
-</div>
+  <div class="controls">
+    <label for="filter">Filter by Team:</label>
+    <select id="filter">
+      <option value="">All Teams</option>
+    </select>
+  </div>
 
-<div class="group-controls">
-  <button id="expandAll">Expand All</button>
-  <button id="collapseAll">Collapse All</button>
-</div>
+  <div id="table-container"></div>
 
-<table id="data-table">
-  <thead></thead>
-  <tbody></tbody>
-</table>
+  <script>
+    async function loadCSV() {
+      const response = await fetch('teams.csv');
+      const text = await response.text();
+      const rows = text.trim().split('\n').map(r => r.split(','));
 
-<script>
-(async function(){
-  const table = document.getElementById('data-table');
-  const tbody = table.tBodies[0];
-  const thead = table.tHead;
-  const search = document.getElementById('search');
-  const teamFilter = document.getElementById('teamFilter');
-  const exportBtn = document.getElementById('export');
-  const expandAllBtn = document.getElementById('expandAll');
-  const collapseAllBtn = document.getElementById('collapseAll');
+      const headers = rows.shift();
+      const data = rows.map(r => {
+        const obj = {};
+        headers.forEach((h, i) => (obj[h.trim()] = r[i]?.trim()));
+        return obj;
+      }).filter(r => r["Indicative Selection"]); // exclude blanks
 
-  let allRows = [];
-  let headers = [];
-  let sortColumn = null;
-  let sortAsc = true;
-  const groupState = {};
-  const customGroupOrder = ['Starters', 'Development', 'Reserve'];
+      const groups = {};
+      data.forEach(row => {
+        const group = row["Indicative Selection"];
+        if (!groups[group]) groups[group] = [];
+        groups[group].push(row);
+      });
 
-  const res = await fetch('data.csv');
-  const text = await res.text();
-  const lines = text.trim().split('\n');
-  headers = lines[0].split(',').map(h => h.trim());
-  allRows = lines.slice(1).map(line => line.split(','));
+      // Custom sort order for groups
+      const customOrder = ["Premier", "Senior", "Intermediate", "Junior"];
+      const sortedGroups = Object.keys(groups).sort((a, b) => {
+        const ai = customOrder.indexOf(a);
+        const bi = customOrder.indexOf(b);
+        if (ai === -1 && bi === -1) return a.localeCompare(b);
+        if (ai === -1) return 1;
+        if (bi === -1) return -1;
+        return ai - bi;
+      });
 
-  const teamIndex = headers.findIndex(h => h.toLowerCase() === 'eligible team');
-  const groupIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
-  const firstNameIndex = headers.findIndex(h => h.toLowerCase() === 'first name');
+      const container = document.getElementById('table-container');
+      container.innerHTML = "";
 
-  // Build header row (excluding Indicative Selection)
-  const headerRow = document.createElement('tr');
-  headers.forEach((header, i) => {
-    if (i === groupIndex) return; // hide indicative selection
-    const th = document.createElement('th');
-    th.textContent = header;
-    th.addEventListener('click', () => sortTable(i));
-    headerRow.appendChild(th);
-  });
-  thead.appendChild(headerRow);
+      sortedGroups.forEach(group => {
+        const groupDiv = document.createElement('div');
+        groupDiv.classList.add('group');
 
-  // Populate team dropdown
-  const uniqueTeams = [...new Set(allRows.map(r => r[teamIndex]))].sort();
-  uniqueTeams.forEach(team => {
-    const opt = document.createElement('option');
-    opt.value = team;
-    opt.textContent = team;
-    teamFilter.appendChild(opt);
-  });
+        const header = document.createElement('div');
+        header.classList.add('group-header');
+        header.textContent = group;
+        header.onclick = () => content.classList.toggle('hidden');
 
-  // Initial render
-  applyFilters();
+        const content = document.createElement('div');
+        content.classList.add('group-content');
 
-  // Event listeners
-  search.addEventListener('input', applyFilters);
-  teamFilter.addEventListener('change', applyFilters);
-  expandAllBtn.addEventListener('click', () => setAllGroups(false));
-  collapseAllBtn.addEventListener('click', () => setAllGroups(true));
+        const table = document.createElement('table');
+        const thead = document.createElement('thead');
+        thead.innerHTML = `
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Contact Number</th>
+            <th>Eligible Team</th>
+          </tr>`;
+        table.appendChild(thead);
 
-  function applyFilters(){
-    const q = search.value.trim().toLowerCase();
-    const selectedTeam = teamFilter.value;
-    const filtered = allRows.filter(row => {
-      const hasGroup = row[groupIndex]?.trim() !== '';
-      const matchesSearch = row.some(c => c.toLowerCase().includes(q));
-      const matchesTeam = !selectedTeam || row[teamIndex] === selectedTeam;
-      return hasGroup && matchesSearch && matchesTeam;
-    });
-    renderGroupedRows(filtered);
-  }
+        const tbody = document.createElement('tbody');
+        groups[group]
+          .sort((a, b) => a["First Name"].localeCompare(b["First Name"]))
+          .forEach(r => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+              <td>${r["First Name"]}</td>
+              <td>${r["Last Name"]}</td>
+              <td>${r["Email"]}</td>
+              <td>${r["Contact Number"]}</td>
+              <td>${r["Eligible Team"]}</td>`;
+            tbody.appendChild(tr);
+          });
+        table.appendChild(tbody);
+        content.appendChild(table);
 
-  function renderGroupedRows(rows){
-    tbody.innerHTML = '';
-    const grouped = {};
-    rows.forEach(r => {
-      const key = r[groupIndex];
-      if(!grouped[key]) grouped[key] = [];
-      grouped[key].push(r);
-    });
+        groupDiv.appendChild(header);
+        groupDiv.appendChild(content);
+        container.appendChild(groupDiv);
+      });
 
-    const sortedGroups = Object.keys(grouped).sort((a,b) => {
-      const idxA = customGroupOrder.indexOf(a);
-      const idxB = customGroupOrder.indexOf(b);
-      if(idxA === -1 && idxB === -1) return a.localeCompare(b);
-      if(idxA === -1) return 1;
-      if(idxB === -1) return -1;
-      return idxA - idxB;
-    });
+      // Populate dropdown filter
+      const filter = document.getElementById('filter');
+      const teams = [...new Set(data.map(r => r["Eligible Team"]).filter(Boolean))].sort();
+      teams.forEach(team => {
+        const opt = document.createElement('option');
+        opt.value = team;
+        opt.textContent = team;
+        filter.appendChild(opt);
+      });
 
-    sortedGroups.forEach(group => {
-      grouped[group].sort((a,b) => a[firstNameIndex].localeCompare(b[firstNameIndex]));
-
-      // Group header with count
-      const trGroup = document.createElement('tr');
-      trGroup.className = 'group-header';
-      const tdGroup = document.createElement('td');
-      tdGroup.colSpan = headers.length - 1;
-      const count = grouped[group].length;
-      if (!(group in groupState)) groupState[group] = false;
-      tdGroup.textContent = (groupState[group] ? '▶ ' : '▼ ') + `${group} (${count})`;
-      trGroup.appendChild(tdGroup);
-      tbody.appendChild(trGroup);
-
-      const groupRows = grouped[group].map(row => {
-        const tr = document.createElement('tr');
-        row.forEach((cell, i) => {
-          if (i === groupIndex) return;
-          const td = document.createElement('td');
-          td.textContent = cell;
-          tr.appendChild(td);
+      // Filter function
+      filter.addEventListener('change', e => {
+        const selected = e.target.value;
+        document.querySelectorAll('.group').forEach(groupDiv => {
+          const rows = groupDiv.querySelectorAll('tbody tr');
+          let visible = false;
+          rows.forEach(row => {
+            const team = row.cells[4].textContent.trim();
+            const match = !selected || team === selected;
+            row.style.display = match ? "" : "none";
+            if (match) visible = true;
+          });
+          groupDiv.style.display = visible ? "" : "none";
         });
-        if (groupState[group]) tr.style.display = 'none';
-        return tr;
       });
-      groupRows.forEach(tr => tbody.appendChild(tr));
+    }
 
-      trGroup.addEventListener('click', () => {
-        groupState[group] = !groupState[group];
-        groupRows.forEach(tr => tr.style.display = groupState[group] ? 'none' : '');
-        tdGroup.textContent = (groupState[group] ? '▶ ' : '▼ ') + `${group} (${count})`;
-      });
-    });
-  }
-
-  function setAllGroups(collapse){
-    Object.keys(groupState).forEach(k => groupState[k] = collapse);
-    applyFilters();
-  }
-
-  function sortTable(index){
-    if(sortColumn === index) sortAsc = !sortAsc;
-    else { sortColumn = index; sortAsc = true; }
-
-    allRows.sort((a,b) => {
-      const valA = a[index].toLowerCase();
-      const valB = b[index].toLowerCase();
-      if(valA < valB) return sortAsc ? -1 : 1;
-      if(valA > valB) return sortAsc ? 1 : -1;
-      return 0;
-    });
-    applyFilters();
-  }
-
-  exportBtn.addEventListener('click', () => {
-    const rows = Array.from(tbody.querySelectorAll('tr:not(.group-header)')).map(r =>
-      Array.from(r.children).map(td => td.textContent)
-    );
-    const csvContent = rows.map(r =>
-      r.map(cell => `"${cell.replace(/"/g,'""')}"`).join(',')
-    ).join('\n');
-    const blob = new Blob([csvContent], {type:'text/csv;charset=utf-8;'});
-    const link = document.createElement('a');
-    link.href = URL.createObjectURL(blob);
-    link.download = 'TeTaiHouTeams2025.csv';
-    link.click();
-  });
-
-})();
-</script>
-
+    loadCSV();
+  </script>
 </body>
 </html>
