--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Te Tai Hou Teams – 2025</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="styles" href="styles.css">
 </head>
 <body>
 
@@ -132,3 +132,4 @@
   </script>
 </body>
 </html>
+
