--- a/index.html
+++ b/index.html
@@ -5,42 +5,126 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Te Tai Hou Teams – 2025</title>
 <style>
+/* --- General page setup --- */
 body {
   font-family: "Segoe UI", Roboto, sans-serif;
-  margin: 20px;
-  background: #f9fafb;
+  background-color: #f9fafb;
+  margin: 0;
+  padding: 20px;
   color: #333;
 }
+
+/* --- Page header --- */
 header {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   gap: 12px;
   margin-bottom: 24px;
 }
-header img { height: 60px; border-radius: 50%; }
-header h1 { font-size: 1.8em; margin: 0; color: #1a365d; }
+header img {
+  height: 60px;
+  border-radius: 50%;
+}
+header h1 {
+  font-size: 1.8em;
+  margin: 0;
+  color: #1a365d;
+}
 
-.controls, .group-controls { margin-bottom: 12px; display: flex; gap: 10px; flex-wrap: wrap; align-items: center; }
-.controls input, .controls select { padding: 6px 10px; border-radius: 4px; border: 1px solid #ccc; }
-.btn { padding: 6px 12px; border-radius: 6px; border: none; background: #2563eb; color: white; cursor: pointer; }
+/* --- Controls --- */
+.controls, .group-controls {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 12px;
+}
+.controls input, .controls select {
+  padding: 6px 10px;
+  border: 1px solid #cbd5e0;
+  border-radius: 6px;
+  font-size: 0.9em;
+}
+.controls input:focus, .controls select:focus {
+  outline: none;
+  border-color: #2b6cb0;
+  box-shadow: 0 0 4px rgba(43,108,176,0.3);
+}
+.btn {
+  padding: 6px 12px;
+  border-radius: 6px;
+  border: none;
+  background: #2563eb;
+  color: white;
+  cursor: pointer;
+}
 .btn:hover { background: #1e40af; }
 
-table { width: 100%; border-collapse: collapse; margin-top: 10px; background: white; box-shadow: 0 2px 6px rgba(0,0,0,0.08); }
-thead th { position: sticky; top: 0; background: #2b6cb0; color: white; padding: 10px; border-bottom: 2px solid #1a365d; }
-tbody td { padding: 8px 10px; border-bottom: 1px solid #e2e8f0; }
-tbody tr:nth-child(even) { background: #f0f7ff; }
-tbody tr:hover td { background: #dbeeff; }
+/* --- Table layout --- */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  table-layout: auto; /* dynamic column widths */
+}
+thead th {
+  position: sticky;
+  top: 0;
+  background-color: #2b6cb0;
+  color: #fff;
+  text-align: left;
+  padding: 10px;
+  font-weight: 600;
+  border-bottom: 2px solid #1a365d;
+  z-index: 2;
+  white-space: nowrap;
+}
+tbody td {
+  padding: 10px;
+  border-bottom: 1px solid #e2e8f0;
+  white-space: nowrap;
+}
+tbody tr:nth-child(even) { background-color: #f0f7ff; }
+tbody tr:hover td { background-color: #dbeeff; }
 
+/* --- Group headers --- */
 .group-header {
-  background: #e6fffa;
+  background-color: #e6fffa;
   color: #234e52;
   font-weight: bold;
   padding: 8px;
   cursor: pointer;
-  margin-top: 4px;
-  border-radius: 4px;
+  border-top: 2px solid #81e6d9;
 }
+.group-header:hover { background-color: #b2f5ea; }
+
+/* --- Collapsible content --- */
+.group-content { transition: all 0.3s ease; }
 .group-content.hidden { display: none; }
+
+/* --- Responsive table --- */
+@media (max-width: 768px) {
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+  thead { display: none; }
+  tr { margin-bottom: 12px; border-bottom: 1px solid #ddd; }
+  td {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+    white-space: normal;
+  }
+  td::before {
+    content: attr(data-label);
+    font-weight: 600;
+    color: #2b6cb0;
+  }
+}
 </style>
 </head>
 <body>
@@ -121,7 +205,7 @@ async function loadCSV() {
     groups[group].sort((a,b)=>a["First Name"].localeCompare(b["First Name"]))
       .forEach(r=>{
         const tr = document.createElement('tr');
-        tr.innerHTML = `<td>${r["First Name"]}</td><td>${r["Last Name"]}</td>`;
+        tr.innerHTML = `<td data-label="First Name">${r["First Name"]}</td><td data-label="Last Name">${r["Last Name"]}</td>`;
         tbody.appendChild(tr);
       });
     table.appendChild(tbody);
@@ -134,7 +218,7 @@ async function loadCSV() {
     container.appendChild(groupDiv);
   });
 
-  // Populate group dropdown
+  // Populate group filter dropdown
   const groupFilter = document.getElementById('groupFilter');
   Object.keys(groups).sort().forEach(g => {
     const opt = document.createElement('option');
@@ -180,6 +264,5 @@ async function loadCSV() {
 
 loadCSV();
 </script>
-
 </body>
 </html>
