--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@ body {
   margin: 0;
   padding: 20px;
   color: #333;
+  text-align: center; /* center table */
 }
 
 /* --- Page header --- */
 header {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 12px;
   margin-bottom: 24px;
 }
@@ -35,7 +36,7 @@ header h1 {
 /* --- Controls --- */
 .controls, .group-controls {
   display: flex;
-  align-items: center;
+  justify-content: center;
   gap: 10px;
   flex-wrap: wrap;
   margin-bottom: 12px;
@@ -44,7 +45,7 @@ header h1 {
   padding: 6px 10px;
   border: 1px solid #cbd5e0;
   border-radius: 6px;
-  font-size: 0.9em;
+  font-size: 0.95em;
 }
 .controls input:focus, .controls select:focus {
   outline: none;
@@ -63,56 +64,49 @@ header h1 {
 
 /* --- Table layout --- */
 table {
-  width: 100%;
+  display: inline-table;        /* width determined by content */
   border-collapse: collapse;
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  table-layout: auto; /* dynamic column widths */
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  table-layout: auto;           /* dynamic widths */
+  margin: 0 auto;               /* center table */
 }
 thead th {
   position: sticky;
   top: 0;
   background-color: #2b6cb0;
   color: #fff;
-  text-align: left;
-  padding: 10px;
   font-weight: 600;
-  border-bottom: 2px solid #1a365d;
-  z-index: 2;
+  padding: 10px 15px;
   white-space: nowrap;
+  z-index: 3;
 }
 tbody td {
-  padding: 10px;
-  border-bottom: 1px solid #e2e8f0;
+  padding: 10px 15px;
   white-space: nowrap;
 }
-tbody tr:nth-child(even) { background-color: #f0f7ff; }
+tbody tr:nth-child(even) td { background-color: #f0f7ff; }
 tbody tr:hover td { background-color: #dbeeff; }
 
 /* --- Group headers --- */
 .group-header {
   background-color: #e6fffa;
-  color: #234e52;
   font-weight: bold;
-  padding: 8px;
   cursor: pointer;
+  padding: 8px 15px;
   border-top: 2px solid #81e6d9;
 }
-.group-header:hover { background-color: #b2f5ea; }
 
 /* --- Collapsible content --- */
-.group-content { transition: all 0.3s ease; }
-.group-content.hidden { display: none; }
+.group-row.hidden { display: none; }
 
 /* --- Responsive table --- */
 @media (max-width: 768px) {
-  table, thead, tbody, th, td, tr {
-    display: block;
-  }
+  table, thead, tbody, th, td, tr { display: block; }
   thead { display: none; }
-  tr { margin-bottom: 12px; border-bottom: 1px solid #ddd; }
+  tr { margin-bottom: 12px; }
   td {
     display: flex;
     justify-content: space-between;
@@ -136,9 +130,7 @@ tbody tr:hover td { background-color: #dbeeff; }
 
 <div class="controls">
   <label for="groupFilter">Filter by Group:</label>
-  <select id="groupFilter">
-    <option value="">All Groups</option>
-  </select>
+  <select id="groupFilter"><option value="">All Groups</option></select>
   <input type="text" id="searchBox" placeholder="Search names...">
 </div>
 
@@ -147,26 +139,35 @@ tbody tr:hover td { background-color: #dbeeff; }
   <button id="collapseAll" class="btn">Collapse All</button>
 </div>
 
-<div id="table-container"></div>
+<table id="data-table">
+  <thead>
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- group headers and rows inserted here -->
+  </tbody>
+</table>
 
 <script>
 async function loadCSV() {
-  const response = await fetch('teams.csv');
-  const text = await response.text();
-  const rows = text.trim().split('\n').map(r => r.split(','));
-
-  const headers = rows.shift();
-  const data = rows.map(r => {
+  const res = await fetch('teams.csv');
+  const text = await res.text();
+  const lines = text.trim().split('\n').map(r => r.split(','));
+  const headers = lines.shift();
+  const data = lines.map(r => {
     const obj = {};
-    headers.forEach((h,i) => obj[h.trim()] = r[i]?.trim());
+    headers.forEach((h,i)=>obj[h.trim()]=r[i]?.trim());
     return obj;
   }).filter(r => r["Indicative Selection"]);
 
-  // Group rows by Indicative Selection
+  // Group rows
   const groups = {};
-  data.forEach(r => {
+  data.forEach(r=>{
     const g = r["Indicative Selection"];
-    if (!groups[g]) groups[g] = [];
+    if(!groups[g]) groups[g]=[];
     groups[g].push(r);
   });
 
@@ -179,90 +180,80 @@ async function loadCSV() {
     return ai-bi;
   });
 
-  const container = document.getElementById('table-container');
-  container.innerHTML = "";
+  const tbody = document.querySelector('#data-table tbody');
+  tbody.innerHTML = '';
 
-  sortedGroups.forEach(group => {
-    const groupDiv = document.createElement('div');
-    groupDiv.className = 'group';
+  sortedGroups.forEach(group=>{
+    // Group header
+    const headerRow = document.createElement('tr');
+    headerRow.className = 'group-header';
+    headerRow.textContent = `${group} (${groups[group].length})`;
+    tbody.appendChild(headerRow);
 
-    const header = document.createElement('div');
-    header.className = 'group-header';
-    header.textContent = `${group} (${groups[group].length})`;
-
-    const content = document.createElement('div');
-    content.className = 'group-content';
-
-    const table = document.createElement('table');
-    const thead = document.createElement('thead');
-    thead.innerHTML = `<tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-    </tr>`;
-    table.appendChild(thead);
-
-    const tbody = document.createElement('tbody');
+    // Data rows
     groups[group].sort((a,b)=>a["First Name"].localeCompare(b["First Name"]))
       .forEach(r=>{
         const tr = document.createElement('tr');
-        tr.innerHTML = `<td data-label="First Name">${r["First Name"]}</td><td data-label="Last Name">${r["Last Name"]}</td>`;
+        tr.className = 'group-row';
+        tr.innerHTML = `<td data-label="First Name">${r["First Name"]}</td>
+                        <td data-label="Last Name">${r["Last Name"]}</td>`;
         tbody.appendChild(tr);
       });
-    table.appendChild(tbody);
-    content.appendChild(table);
 
-    header.onclick = ()=>content.classList.toggle('hidden');
-
-    groupDiv.appendChild(header);
-    groupDiv.appendChild(content);
-    container.appendChild(groupDiv);
+    // Toggle visibility on click
+    headerRow.addEventListener('click', ()=>{
+      let next = headerRow.nextElementSibling;
+      while(next && !next.classList.contains('group-header')){
+        next.classList.toggle('hidden');
+        next = next.nextElementSibling;
+      }
+    });
   });
 
-  // Populate group filter dropdown
+  // Populate dropdown
   const groupFilter = document.getElementById('groupFilter');
-  Object.keys(groups).sort().forEach(g => {
+  Object.keys(groups).sort().forEach(g=>{
     const opt = document.createElement('option');
-    opt.value = g;
-    opt.textContent = g;
+    opt.value = g; opt.textContent = g;
     groupFilter.appendChild(opt);
   });
 
-  // Filter by group + search
-  function applyFilter() {
-    const selectedGroup = groupFilter.value.toLowerCase();
-    const searchQuery = document.getElementById('searchBox').value.toLowerCase();
-    document.querySelectorAll('.group').forEach(groupDiv => {
-      const header = groupDiv.querySelector('.group-header');
-      const groupName = header.textContent.toLowerCase();
-      const rows = groupDiv.querySelectorAll('tbody tr');
-
-      let anyVisible = false;
-      rows.forEach(row => {
-        const first = row.cells[0].textContent.toLowerCase();
-        const last = row.cells[1].textContent.toLowerCase();
-        const matchSearch = first.includes(searchQuery) || last.includes(searchQuery);
-        const matchGroup = !selectedGroup || groupName.includes(selectedGroup);
-        const show = matchSearch && matchGroup;
-        row.style.display = show ? "" : "none";
-        if(show) anyVisible = true;
-      });
-      groupDiv.style.display = anyVisible ? "" : "none";
+  // Filter/search
+  function applyFilter(){
+    const filter = groupFilter.value.toLowerCase();
+    const query = document.getElementById('searchBox').value.toLowerCase();
+    document.querySelectorAll('tbody tr').forEach(tr=>{
+      if(tr.classList.contains('group-header')){
+        // show header if any child matches
+        let next = tr.nextElementSibling;
+        let anyVisible = false;
+        while(next && !next.classList.contains('group-header')){
+          const first = next.cells[0].textContent.toLowerCase();
+          const last = next.cells[1].textContent.toLowerCase();
+          const matchSearch = first.includes(query) || last.includes(query);
+          const matchGroup = !filter || tr.textContent.toLowerCase().includes(filter);
+          next.style.display = (matchSearch && matchGroup) ? '' : 'none';
+          if(next.style.display==='') anyVisible = true;
+          next = next.nextElementSibling;
+        }
+        tr.style.display = anyVisible ? '' : 'none';
+      }
     });
   }
-
   groupFilter.addEventListener('change', applyFilter);
   document.getElementById('searchBox').addEventListener('input', applyFilter);
 
-  // Expand/Collapse All buttons
+  // Expand/Collapse All
   document.getElementById('expandAll').onclick = ()=>{
-    document.querySelectorAll('.group-content').forEach(c=>c.classList.remove('hidden'));
+    document.querySelectorAll('.group-row').forEach(r=>r.classList.remove('hidden'));
   };
   document.getElementById('collapseAll').onclick = ()=>{
-    document.querySelectorAll('.group-content').forEach(c=>c.classList.add('hidden'));
+    document.querySelectorAll('.group-row').forEach(r=>r.classList.add('hidden'));
   };
 }
 
 loadCSV();
 </script>
+
 </body>
 </html>
