--- a/index.html
+++ b/index.html
@@ -50,210 +50,4 @@ header h1 {
 .controls input:focus, .controls select:focus {
   outline: none;
   border-color: #2b6cb0;
-  box-shadow: 0 0 4px rgba(43,108,176,0.3);
-}
-.btn {
-  padding: 6px 12px;
-  border-radius: 6px;
-  border: none;
-  background: #2563eb;
-  color: white;
-  cursor: pointer;
-}
-.btn:hover { background: #1e40af; }
-
-/* --- Table layout --- */
-table {
-  display: inline-table;        /* width determined by content */
-  border-collapse: collapse;
-  background-color: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  table-layout: auto;           /* dynamic widths */
-  margin: 0 auto;               /* center table */
-}
-thead th {
-  position: sticky;
-  top: 0;
-  background-color: #2b6cb0;
-  color: #fff;
-  font-weight: 600;
-  padding: 10px 15px;
-  white-space: nowrap;
-  z-index: 3;
-}
-tbody td {
-  padding: 10px 15px;
-  white-space: nowrap;
-}
-tbody tr:nth-child(even) td { background-color: #f0f7ff; }
-tbody tr:hover td { background-color: #dbeeff; }
-
-/* --- Group headers --- */
-.group-header {
-  background-color: #e6fffa;
-  font-weight: bold;
-  cursor: pointer;
-  padding: 8px 15px;
-  border-top: 2px solid #81e6d9;
-}
-
-/* --- Collapsible content --- */
-.group-row.hidden { display: none; }
-
-/* --- Responsive table --- */
-@media (max-width: 768px) {
-  table, thead, tbody, th, td, tr { display: block; }
-  thead { display: none; }
-  tr { margin-bottom: 12px; }
-  td {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px;
-    white-space: normal;
-  }
-  td::before {
-    content: attr(data-label);
-    font-weight: 600;
-    color: #2b6cb0;
-  }
-}
-</style>
-</head>
-<body>
-
-<header>
-  <img src="logo.png" alt="Te Tai Hou Logo">
-  <h1>Te Tai Hou Teams – 2025</h1>
-</header>
-
-<div class="controls">
-  <label for="groupFilter">Filter by Group:</label>
-  <select id="groupFilter"><option value="">All Groups</option></select>
-  <input type="text" id="searchBox" placeholder="Search names...">
-</div>
-
-<div class="group-controls">
-  <button id="expandAll" class="btn">Expand All</button>
-  <button id="collapseAll" class="btn">Collapse All</button>
-</div>
-
-<table id="data-table">
-  <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-    </tr>
-  </thead>
-  <tbody>
-    <!-- group headers and rows inserted here -->
-  </tbody>
-</table>
-
-<script>
-async function loadCSV() {
-  const res = await fetch('teams.csv');
-  const text = await res.text();
-  const lines = text.trim().split('\n').map(r => r.split(','));
-  const headers = lines.shift();
-  const data = lines.map(r => {
-    const obj = {};
-    headers.forEach((h,i)=>obj[h.trim()]=r[i]?.trim());
-    return obj;
-  }).filter(r => r["Indicative Selection"]);
-
-  // Group rows
-  const groups = {};
-  data.forEach(r=>{
-    const g = r["Indicative Selection"];
-    if(!groups[g]) groups[g]=[];
-    groups[g].push(r);
-  });
-
-  const customOrder = ["Premier","Senior","Intermediate","Junior"];
-  const sortedGroups = Object.keys(groups).sort((a,b)=>{
-    const ai = customOrder.indexOf(a), bi = customOrder.indexOf(b);
-    if(ai===-1 && bi===-1) return a.localeCompare(b);
-    if(ai===-1) return 1;
-    if(bi===-1) return -1;
-    return ai-bi;
-  });
-
-  const tbody = document.querySelector('#data-table tbody');
-  tbody.innerHTML = '';
-
-  sortedGroups.forEach(group=>{
-    // Group header
-    const headerRow = document.createElement('tr');
-    headerRow.className = 'group-header';
-    headerRow.textContent = `${group} (${groups[group].length})`;
-    tbody.appendChild(headerRow);
-
-    // Data rows
-    groups[group].sort((a,b)=>a["First Name"].localeCompare(b["First Name"]))
-      .forEach(r=>{
-        const tr = document.createElement('tr');
-        tr.className = 'group-row';
-        tr.innerHTML = `<td data-label="First Name">${r["First Name"]}</td>
-                        <td data-label="Last Name">${r["Last Name"]}</td>`;
-        tbody.appendChild(tr);
-      });
-
-    // Toggle visibility on click
-    headerRow.addEventListener('click', ()=>{
-      let next = headerRow.nextElementSibling;
-      while(next && !next.classList.contains('group-header')){
-        next.classList.toggle('hidden');
-        next = next.nextElementSibling;
-      }
-    });
-  });
-
-  // Populate dropdown
-  const groupFilter = document.getElementById('groupFilter');
-  Object.keys(groups).sort().forEach(g=>{
-    const opt = document.createElement('option');
-    opt.value = g; opt.textContent = g;
-    groupFilter.appendChild(opt);
-  });
-
-  // Filter/search
-  function applyFilter(){
-    const filter = groupFilter.value.toLowerCase();
-    const query = document.getElementById('searchBox').value.toLowerCase();
-    document.querySelectorAll('tbody tr').forEach(tr=>{
-      if(tr.classList.contains('group-header')){
-        // show header if any child matches
-        let next = tr.nextElementSibling;
-        let anyVisible = false;
-        while(next && !next.classList.contains('group-header')){
-          const first = next.cells[0].textContent.toLowerCase();
-          const last = next.cells[1].textContent.toLowerCase();
-          const matchSearch = first.includes(query) || last.includes(query);
-          const matchGroup = !filter || tr.textContent.toLowerCase().includes(filter);
-          next.style.display = (matchSearch && matchGroup) ? '' : 'none';
-          if(next.style.display==='') anyVisible = true;
-          next = next.nextElementSibling;
-        }
-        tr.style.display = anyVisible ? '' : 'none';
-      }
-    });
-  }
-  groupFilter.addEventListener('change', applyFilter);
-  document.getElementById('searchBox').addEventListener('input', applyFilter);
-
-  // Expand/Collapse All
-  document.getElementById('expandAll').onclick = ()=>{
-    document.querySelectorAll('.group-row').forEach(r=>r.classList.remove('hidden'));
-  };
-  document.getElementById('collapseAll').onclick = ()=>{
-    document.querySelectorAll('.group-row').forEach(r=>r.classList.add('hidden'));
-  };
-}
-
-loadCSV();
-</script>
-
-</body>
-</html>
+  box-shadow: 0 0 4px rgba(43,
